Fix stretch support

--- a/test/cases/intrinsic.out.css
+++ b/test/cases/intrinsic.out.css
@@ -1,5 +1,6 @@
 a {
   width: -webkit-fill-available;
+  width: -webkit-stretch;
   width: -moz-available;
   width: stretch;
 }
@@ -21,12 +22,14 @@ p {
 
 .outdated {
   width: -webkit-fill-available;
+  width: -webkit-stretch;
   width: -moz-available;
   width: fill;
 }
 
 .old {
   width: -webkit-fill-available;
+  width: -webkit-stretch;
   width: -moz-available;
   width: fill-available;
 }
